@@ -1,5 +1,5 @@
 /*
-** Copyright (C) 1991, 1997 Free Software Foundation, Inc.
+** Copyright (C) 1991, 1997,2012 Free Software Foundation, Inc.
 **
 ** This file is part of TACK.
 **
@@ -21,7 +21,7 @@
 
 #include <tack.h>
 
-MODULE_ID("$Id: color.c,v 1.11 2012/04/29 14:09:45 tom Exp $")
+MODULE_ID("$Id: color.c,v 1.12 2012/04/29 14:09:45 tom Exp $")
 
 /*
  * Color terminal tests.  Has only one entry point: test_color().
